<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/modle_logo"
            android:text="@string/welcome_to_university_app"
            android:textAlignment="center"
            android:lineSpacingExtra="15dp"
            android:textColor="#fff"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:drawableStart="@drawable/modle_logo" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey"
            android:layout_margin="20dp"/>

        <TextView
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/forgotten_pw"
            android:textColor="#fff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:text="Login"-->
            <!--android:background="@drawable/buttonstylepink"-->
            <!--android:textColor="#fff"/>-->
            <Button
                android:id="@+id/btn_issue"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle2"
                android:text="@string/contact_us"
                android:textColor="#fff" />
            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle2"
                android:text="@string/register"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_black_64dp"
            android:drawablePadding="10dp"
            android:fontFamily="monospace"
            android:hint="@string/loginOrEmail" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/buttonstylepink"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:fontFamily="monospace"
            android:text="@string/sign_in"
            android:textColor="#fff" />


    </LinearLayout>
</LinearLayout>