<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/modle_logo"
            android:text="@string/welcome_to_university_app"
            android:textAlignment="center"
            android:lineSpacingExtra="15dp"
            android:textColor="#fff"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:drawableStart="@drawable/modle_logo" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgrey"
            android:layout_margin="20dp"/>

        <TextView
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/leading_message"
            android:textColor="#fff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:background="@drawable/buttonstyle2"
                android:text="@string/sign_up"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonstylepink"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:fontFamily="monospace"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:drawableEnd="@drawable/ic_send_black_24dp" />
    </LinearLayout>
</LinearLayout>